DevTools shows overlay scrollbar for enabled aura overlay scrollbar and mac

DevTools mobile emulator currently does not show android overlay
scrollbar when we enabled aura overlay scrollbar or we use it on Mac.

This issue is caused by we have not set any overlay scrollbar setting
on Mac and have not set solid_color_scrollbar_color when enabled aura
overlay scrollbar.

In this patch, we set default overlay scrollbar same as Android Overlay
Scrollbar for Android and DevTools mobile emulator, Aura Overlay
Scrollbar will override the default settings.

BUG=673258

Review-Url: https://codereview.chromium.org/2870733002
Cr-Commit-Position: refs/heads/master@{#470570}

Former-commit-id: b50f6446eb79c4aaaac0a5eefdf90d2b4a99ce54